--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "wait-for-vercel-preview",
-  "version": "1.3.1",
+  "name": "wait-for-dev-env",
+  "version": "1.0",
   "description": "",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/patrickedqvist/wait-for-vercel-preview.git"
+    "url": "git+https://github.com/Axeldeblen/wait-for-dev-env"
   },
   "scripts": {
     "test": "jest --watch",
@@ -16,10 +16,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/patrickedqvist/wait-for-vercel-preview/issues"
-  },
-  "homepage": "https://github.com/patrickedqvist/wait-for-vercel-preview#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
